// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profilesstyle__Container-sc-1rmlt6a-0 hSEqHy"
>
  <h1
    class="profilesstyle__Title-sc-1rmlt6a-1 iFejBC"
  >
    Who's watching?
  </h1>
  <ul
    class="profilesstyle__List-sc-1rmlt6a-2 bxgBOh"
  >
    <li
      class="profilesstyle__Item-sc-1rmlt6a-5 hJFvGP"
    >
      <img
        class="profilesstyle__Picture-sc-1rmlt6a-4 gKMzFy"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profilesstyle__Name-sc-1rmlt6a-3 jAZQlB"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profilesstyle__Container-sc-1rmlt6a-0 hSEqHy"
>
  <h1
    class="profilesstyle__Title-sc-1rmlt6a-1 iFejBC"
  >
    Who's watching?
  </h1>
  <ul
    class="profilesstyle__List-sc-1rmlt6a-2 bxgBOh"
  >
    <li
      class="profilesstyle__Item-sc-1rmlt6a-5 hJFvGP"
    >
      <img
        class="profilesstyle__Picture-sc-1rmlt6a-4 gKMzFy"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profilesstyle__Name-sc-1rmlt6a-3 jAZQlB"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
